--- a/css/completion.css
+++ b/css/completion.css
@@ -7,8 +7,19 @@
 @font-face {
 	font-family: "Exo";
 	src: url("../Fonts/Exo-SemiBold.ttf");
+	unicode-range: U+0020-007E;
 }
 
+@font-face {
+	font-family: "L2";
+	src: url('../Fonts/L2-SemiBold.ttf');
+}
+
+@font-face {
+	font-family: "GeosansLightModified";
+	src: url('../Fonts/GeosansLight-Modified.otf');
+	unicode-range: U+0020-007E;
+}
 
 @keyframes rotate-1-round {
 	from {
@@ -199,7 +210,7 @@ button:active {
     z-index: -999;
     transition-duration: 0.3s;
     /* opacity: 0.5; */
-    background: url(https://smartrte.github.io/bgs/5.webp);
+    background: url(bgs/5.webp);
     background-size: cover;
     background-position: center top;
 }
@@ -355,7 +366,7 @@ button:active {
 		-1px -1px 1px black,
 		0px -1px 1px black,
 		1px -1px 1px black;
-	font-family: 'geosans', sans-serif;
+	font-family: "GeosansLightModified", "L2", sans-serif;
 	font-weight: bolder;
 }
 
@@ -879,25 +890,22 @@ button:active {
 }
 
 #setting-close {
-	font-size: 5rem;
-	font-family: 'Exo', sans-serif;
-	height: 3rem;
-	width: 3rem;
-	line-height: 3rem;
-	text-align: center;
-	position: fixed;
-	text-shadow: 0px 0px 3px grey,
-		0px 0px 3px grey,
-		0px 0px 3px grey,
-		0px 0px 3px grey;
-	display: block;
-	left: 87%;
-	top: 10%;
-	/* border: #7f0063 solid 4px; */
-	z-index: 999;
-	color: whitesmoke;
-	transition-duration: 0.3s;
-	/* animation: backwards ease-out rotate-1-round 0.5s; */
+    font-size: 3rem;
+    font-family: 'Exo', sans-serif;
+    height: 3rem;
+    width: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    position: fixed;
+    text-shadow: 0px 0px 3px grey, 0px 0px 3px grey, 0px 0px 3px grey, 0px 0px 3px grey;
+    display: block;
+    left: 87%;
+    top: 10%;
+    /* border: #7f0063 solid 4px; */
+    z-index: 999;
+    color: whitesmoke;
+    transition-duration: 0.3s;
+    /* animation: backwards ease-out rotate-1-round 0.5s; */
 }
 
 #setting-close:hover {
@@ -1232,32 +1240,28 @@ button:active {
 }
 
 #modify-window-close {
-	content: ;
-	font-size: 5rem;
-	height: 3rem;
-	width: 3rem;
-	line-height: 3rem;
-	text-align: center;
-	position: fixed;
-	font-family: 'Exo', sans-serif;
-	text-shadow: 0px 0px 3px grey,
-		0px 0px 3px grey,
-		0px 0px 3px grey,
-		0px 0px 3px grey;
-	display: block;
-	left: 87%;
-	top: 5%;
-	/* border: #7f0063 solid 4px; */
-	z-index: 999;
-	color: whitesmoke;
-	transition-duration: 0.3s;
-	/* animation: backwards ease-out rotate-1-round 0.5s; */
+    content: ;
+    font-size: 3rem;
+    height: 3rem;
+    width: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    position: fixed;
+    font-family: 'Exo', sans-serif;
+    text-shadow: 0px 0px 3px grey, 0px 0px 3px grey, 0px 0px 3px grey, 0px 0px 3px grey;
+    display: block;
+    left: 87%;
+    top: 5%;
+    z-index: 999;
+    color: whitesmoke;
+    transition-duration: 0.3s;
+    
 }
 
 #modify-window-close:hover {
-	cursor: pointer;
-	transform: scale(1.3);
-	animation: forwards ease-out rotate-1-round 0.5s;
+    cursor: pointer;
+    transform: scale(1.3);
+    animation: forwards ease-out rotate-1-round 0.5s;
 }
 
 #modify-window-close:active {
