--- a/css/b30gen.css
+++ b/css/b30gen.css
@@ -342,6 +342,10 @@ button:active {
 	z-index: 1;
 }
 
+#user-name-input{
+	width: 120px;
+}
+
 #user-course-dan {
 	height: 6rem;
 	width: 55rem;
@@ -828,6 +832,7 @@ button:active {
 	left: 0;
 	opacity: 30%;
 	position: fixed;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 }
 
@@ -846,6 +851,7 @@ button:active {
 	display: block;
 	position: fixed;
 	float: none;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 	background-color: azure;
 	opacity: 1;
@@ -964,20 +970,23 @@ button:active {
 }
 
 #user-course-dan-display {
-	float: left;
-	text-align: center;
-	width: 60%;
-	margin-left: 10%;
-	border: solid 1px red;
-	background-image: url('../img/course/1.png');
-	transition-duration: 0.3s;
-	cursor: pointer;
-	font-family: 'GeosansLightModified', sans-serif;
-	font-weight: bolder;
-	text-shadow: 0 0 2px aliceblue,
-		0 0 2px aliceblue,
-		0 0 2px aliceblue,
-		0 0 2px aliceblue;
+    float: left;
+    text-align: center;
+    width: 200px;
+	height: 80%;
+	line-height: 30px;
+    margin-left: 10%;
+    border: solid 1px red;
+    background-image: url(../img/course/1.png);
+    transition-duration: 0.3s;
+    cursor: pointer;
+    font-family: 'GeosansLightModified', sans-serif;
+    font-weight: bolder;
+    text-shadow: 0 0 2px aliceblue, 0 0 2px aliceblue, 0 0 2px aliceblue, 0 0 2px aliceblue;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right center;
+	border: none;
 }
 
 #user-course-dan-display:active {
@@ -1032,6 +1041,10 @@ button:active {
 /* .user-course-dan-option:active, */
 .user-course-dan-option:active {
 	scale: 0.8;
+}
+
+.setting-button {
+	font-size: 0.9rem;
 }
 
 #avatar-display,
@@ -1207,6 +1220,7 @@ button:active {
 	left: 0;
 	opacity: 30%;
 	position: fixed;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 }
 
@@ -1226,6 +1240,7 @@ button:active {
 	display: block;
 	position: fixed;
 	float: none;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 	background-color: aliceblue;
 	opacity: 1;
@@ -1233,7 +1248,7 @@ button:active {
 }
 
 #modify-window-close {
-	content: ;
+	content: 'X';
 	font-size: 5rem;
 	height: 3rem;
 	width: 3rem;
@@ -1468,6 +1483,7 @@ button:active {
 	border-radius: 7px;
 	box-sizing: content-box;
 	box-shadow: 2px 2px 10px gray;
+	-webkit-user-select: none;
 	user-select: none;
 	outline: none;
 	opacity: 0.3;
@@ -1483,6 +1499,7 @@ button:active {
 	bottom: 25%;
 	opacity: 50%;
 	transition-duration: 0.3s;
+	-webkit-user-select: none;
 	user-select: none;
 	outline: none;
 }
@@ -1490,6 +1507,7 @@ button:active {
 #back-to-top:hover {
 	cursor: pointer;
 	transform: scale(1.1);
+	-webkit-user-select: none;
 	user-select: none;
 	outline: none;
 	opacity: 0.9;
@@ -1497,6 +1515,7 @@ button:active {
 
 #back-to-top:active {
 	transform: scale(0.6);
+	-webkit-user-select: none;
 	user-select: none;
 	outline: none;
 	opacity: 80;
@@ -1508,6 +1527,7 @@ button:active {
 	position: relative;
 	bottom: 25%;
 	opacity: 90%;
+	-webkit-user-select: none;
 	user-select: none;
 	outline: none;
 }
@@ -1586,6 +1606,7 @@ button:active {
 	left: 0;
 	opacity: 30%;
 	position: fixed;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 }
 
@@ -1602,6 +1623,7 @@ button:active {
 	display: block;
 	position: fixed;
 	float: none;
+	-webkit-backdrop-filter: blur(5px);
 	backdrop-filter: blur(5px);
 	background-color: azure;
 	opacity: 1;
