--- a/css/fakeResult.css
+++ b/css/fakeResult.css
@@ -169,10 +169,21 @@ body {
 }
 
 #top-bar-background {
-	position: relative;
-	width: 100%;
-	height: 90%;
-	/* display: none; */
+    position: relative;
+    width: 100%;
+    height: 90%;
+    /* display: none; */
+    z-index: -6;
+}
+
+#top-bar-background-right {
+    display: block;
+    position: relative;
+    height: 91%;
+    width: 50%;
+    left: 50%;
+    top: -93%;
+    z-index: 7;
 }
 
 #result {
@@ -244,6 +255,7 @@ body {
 	left: -187px;
 	height: 375px;
 	width: 500px;
+	z-index: 9;
 }
 
 .character-border {
@@ -253,13 +265,14 @@ body {
 	/* position: relative; */
 	left: -135px;
 	width: 270px;
+	z-index: 9;
 }
 
 #avatar-icon {
 	/* top: -40px; */
 	position: absolute;
 	display: block;
-	z-index: 9;
+	z-index: 10;
 	top: -42px;
 	left: -114px;
 	width: 230px;
@@ -285,6 +298,7 @@ body {
 	height: 25px;
 	top: 5px;
 	display: none;
+	z-index: 10;
 }
 
 #hash-number {
@@ -298,6 +312,7 @@ body {
 	width: 75px;
 	text-align: center;
 	display: none;
+	z-index: 10;
 }
 
 #potential-border {
@@ -345,7 +360,9 @@ body {
 }
 
 #course-banner {
-	height: 65%;
+    height: 65%;
+    z-index: 6;
+    position: relative;
 }
 
 #username-text {
@@ -360,7 +377,7 @@ body {
 	font-weight: bolder;
 	opacity: 90%;
 	text-shadow: 3px 3px 1px rgb(140, 10, 10), 0 0 2px rgb(100, 10, 10);
-	letter-spacing: 0px;
+	letter-spacing: 1px;
 }
 
 #main-background {
@@ -378,6 +395,7 @@ body {
 	position: absolute;
 	left: 50%;
 	top: 8px;
+	z-index: 12;
 }
 
 #potential-change-border {
@@ -410,7 +428,7 @@ body {
 	display: block;
 	position: absolute;
 	left: 2217px;
-
+	z-index: 8;
 }
 
 #fragment-background {
@@ -440,6 +458,7 @@ body {
 	display: block;
 	position: absolute;
 	left: 2679px;
+	z-index: 8;
 }
 
 #fragment-text,
@@ -463,7 +482,7 @@ body {
 	margin: 0 auto;
 	width: 250px;
 	font-family: "Exo";
-	font-weight: bolder;
+	/* font-weight: bolder; */
 	top: 5px;
 	text-shadow: 0 0 3px white, 0 0 3px white, 0 0 3px white;
 }
@@ -1118,6 +1137,8 @@ body {
     line-height: 10rem;
     display: inline-block;
     font-size: 4rem;
+    text-overflow: clip;
+    overflow: hidden;
 }
 
 #quick-select img {
